# universal-recycle

./: BUILD  LICENSE  README.md  WORKSPACE.repos  build_profiles.yaml  cache_config.yaml  repos.yaml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: README.md  cli-reference.md  installation.md  quickstart.md
examples/: simple-repo.yaml
plugins/example-plugin/: plugin.yaml
recycle/: BUILD  __init__.py  bazel.py  cli.py  collaboration.py  distribution.py  plugin.py  templates.py  validation.py
repos/python-requests/: setup.py
repos/python-requests/grpc/: python_requests.proto
repos/python-requests/tests/: test_lowlevel.py  test_requests.py  test_testserver.py
templates/: __init__.py  cpp_python_hybrid.yaml  multi_language_monorepo.yaml  rust_wasm.yaml
universal-recycle/: .bazelversion  IMPROVEMENTS_SUMMARY.md  README.md  WORKSPACE  WORKSPACE.repos  distribution_config.yaml  repos.yaml  requirements.txt  setup.py
universal-recycle/.github/: dependabot.yml  pull_request_template.md
universal-recycle/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
universal-recycle/.github/workflows/: release.yml
universal-recycle/docs/: README.md  cli-reference.md  installation.md  plugins.md  quickstart.md  troubleshooting.md
universal-recycle/plugins/example-plugin/: main.py
universal-recycle/recycle/: bindings.py  build.py  cache.py  colors.py  performance.py  validation.py  wizard.py
universal-recycle/repos/python-requests/grpc/: CMakeLists.txt  python_requests_client.py
universal-recycle/templates/: python_only.yaml
(+1 files in other folders)
